# trex

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  examples.yml  release.yml  tests.yml
docs/: README.md
examples/: BasicAtlasGeneration.cpp  BasicTextShaping.cpp  CMakeLists.txt  Example_1_AtlasGeneration.cpp  Example_2_LoadAllChars.cpp  Example_3_RenderSingleCharacters.cpp  Example_4_FontFromMemory.cpp  Example_5_RenderFontSDF.cpp  Example_6_TextShaping.cpp  Example_7_MeasureText.cpp  Example_8_RenderFontSubpixel.cpp  Example_9_RenderEmoji.cpp  Example_TextShaping.cpp  README.md  RenderFontSDF.cpp  RenderSingleCharacters.cpp
examples/shaders/: sdf.fs
include/Trex/: Atlas.hpp  BitmapHelpers.hpp  Charset.hpp  TextShaper.hpp
src/: Atlas.cpp  Atlas.hpp  BitmapHelpers.cpp  Charset.cpp  Charset.hpp  Font.cpp  Font.hpp  Shaper.cpp  TextShaper.cpp  TextShaper.hpp
tests/: CMakeLists.txt  README.md  TestAtlas.cpp  TestBitmapHelpers.cpp  TestCharset.cpp  TestFont.cpp  TestTextShaper.cpp
